@@ -1,3 +1,8 @@
+2002-05-23  Aruna P R <aruna.pou@wipro.com>
+
+	* logview.c: Disable multiple openings of the same file. Fixes 
+	#75121.
+
 2002-05-23  Narayana Pattipati <narayana.pattipati@wipro.com>
 
 	* actions.c: Make sure we save the description in the actions
